Fix forecasts horizontal scroll

--- a/assets/src/assets/scss/layout/forecasts/_filter.scss
+++ b/assets/src/assets/scss/layout/forecasts/_filter.scss
@@ -13,27 +13,38 @@
         padding: 24px;
     }
 
-    &__group {
-        display: flex;
-        overflow-x: auto;
-        padding: 0 16px;
+    &__scroll {
+        overflow: hidden;
+        position: relative;
+        //padding: 0 16px;
         margin-bottom: 16px;
         margin-left: -16px;
         width: calc(100% + 32px);
-        //-webkit-overflow-scrolling: touch;
-
-        &::-webkit-scrollbar {
-            display: none;
-        }
 
         @include media-up(md) {
             margin-bottom: 24px;
         }
 
         @include media-up(lg) {
-            padding: 0 24px;
+            //padding: 0 24px;
             margin-left: -24px;
             width: calc(100% + 48px);
+        }
+    }
+
+    &__group {
+        display: flex;
+        overflow-x: auto;
+        padding: 0 16px;
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+
+        &::-webkit-scrollbar {
+            display: none;
+        }
+
+        @include media-up(lg) {
+            padding: 0 24px;
         }
     }
 
